--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
+cycler==0.10.0
 Django==1.10.4
+h5py==2.6.0
+matplotlib==1.5.3
+numpy==1.11.2
+Pillow==3.4.2
+pyparsing==2.1.10
+python-dateutil==2.6.0
+pytz==2016.10
+PyYAML==3.12
+scikit-learn==0.18.1
+scipy==0.18.1
+six==1.10.0
